# backend/internal/model/like.go
@@ -1,0 +1,10 @@
+package model
+
+import "time"
+
+type Like struct {
+    ID        uint      `gorm:"primaryKey"`
+    PostID    uint      `gorm:"not null"`
+    UserID    string    `gorm:"not null"`
+    CreatedAt time.Time
+}
